takamaka_examples/src/io/takamaka/tests/errors/inconsistententry1/Sub.java
package io.takamaka.tests.errors.inconsistententry1;

import io.takamaka.code.lang.Entry;

public class Sub extends Super {
	public @Entry void m() {}
}